I made changes to style

--- a/index.html
+++ b/index.html
@@ -272,12 +272,13 @@
               <span class="errors" id="scoreError"></span>
             </div>
           </div>
-          <button type="button" id="regBtn">Submit</button>
+          <button type="button" id="regBtn">Submit </button>
         </form>
       </div>
     </div>
     <div>
       <canvas id="myChart"></canvas>
+      </div>
   
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
