I made changes to styling

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <div class="background">
       <div class="container">
-        <h1>SCOLARSHIP APPLICATION FORM</h1>
+        <h1>SCHOLARSHIP APPLICATION FORM</h1>
         <form>
           <div class="enterName">
             <div class="firstName">
